--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "composer/installers": "^1.0.21",
         "wikimedia/composer-merge-plugin": "~1.3",
-        "drupal/admin_toolbar": "^8.1"
+        "drupal/admin_toolbar": "^8.1",
+        "drupal/devel": "^8.1"
     },
     "replace": {
         "drupal/core": "~8.1"
